# tt_CompassWay

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  readme.md
compose/: Dockerfile  docker-compose.yml
loan_schedule/: asgi.py  settings.py  urls.py  wsgi.py
payments/: models.py  serializers.py  tests.py  urls.py  utils.py  views.py
payments/migrations/: 0001_initial.py
