[tool.poetry]
name = "loan-schedule"
version = "0.1.0"
description = ""
authors = ["Toshka <tinkerino571@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15.2"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
